--- a/f2.html
+++ b/f2.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="sky blues">
     <h1> Hello Everyone</h1>
     <h1>My second file</h1>
     <h3>Kuldip</h3>
+    <h1>zala</h1>
 </body>
 </html>
